yaml/ingress/ingress-myapp-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp-tls
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - myapp.inglemirepharms.cn
    secretName: ingle-secret
  rules:
  - host: myapp.inglemirepharms.cn
    http:
      paths:
      - path: 
        backend:
          serviceName: myapp
          servicePort: 80
