yaml/ingress/ingress-tomcat-https.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tomcat-tls
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - tomcat.inglemirepharms.cn
    secretName: ingle-secret
  rules:
  - host: tomcat.inglemirepharms.cn
    http:
      paths:
      - path: 
        backend:
          serviceName: tomcat
          servicePort: 8080
